Created login page and setting up JSON-SERVER for basic rest API

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 .pointer {
   cursor: pointer;
 }
+
+.login-shadow {
+  box-shadow: 0 1rem 1rem rgba(0,0,0,.5);
+}
+
+.login-card {
+  transform: translateY(-3rem);
+  width: max(25vw, 18rem);
+}
+
+.background-div {
+  height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+  object-fit: cover;
+}
