--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@
   background-image: url(https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
   object-fit: cover;
 }
+
+/* .pizza-image {
+  width: max(20vw, 12rem);
+  object-fit: cover;
+} */
