--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@
   object-fit: cover;
 }
 
+.menu-pic {
+  border: 1px solid blue;
+}
+
+.menu-card {
+  box-shadow: 0 0.5rem 0.5rem rgba(0,0,0,.3);
+}
+
 /* .pizza-image {
   width: max(20vw, 12rem);
   object-fit: cover;
