--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@
   box-shadow: 0 0.5rem 0.5rem rgba(0,0,0,.3);
 }
 
+.fixed-height {
+  height: 50px;
+}
+
 /* .pizza-image {
   width: max(20vw, 12rem);
   object-fit: cover;
